infraestructure/posts.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deplolyment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: diangogav/posts
