infraestructure/eventbus.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector: 
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
