infraestructure/moderation.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector: 
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
