infraestructure/posts.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-services
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  selector: 
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
